fix player name text overflow issue on match detail page

--- a/src/pages/match-detail/match-detail.scss
+++ b/src/pages/match-detail/match-detail.scss
@@ -218,6 +218,10 @@ page-match-detail {
       //报名详细栏目
       .registration-detail{
         margin: 0;
+
+        .player-name{
+          max-width: 100px;
+        }
         ion-item-divider{
           padding: 1rem;
           font-size: 1.4rem;
